k8s-managed/00-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keypouch
