k8s-managed/05-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keypouch-frontend
  namespace: keypouch
spec:
  replicas: 2
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
      - name: frontend
        # Replace with your Docker Registry URL (e.g. gcr.io/my-project/frontend:latest)
        image: frontend:latest
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: keypouch-web-service
  namespace: keypouch
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    component: frontend
